--- a/form/home.html
+++ b/form/home.html
@@ -8,7 +8,7 @@
     <title>FORM</title>
   </head>
   <body style="background-color:powderblue;">
-    <p><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>STORIA DI INTERNET</center></strong></p>
+    <p><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>FORM</center></strong></p>
 
 <form action="url-script" method="post">
     Nome <input type="text" name="nomepersona" size="25"><br>
