--- a/form/home.html
+++ b/form/home.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <title>FORM</title>
   </head>
-  <body style="background-color:powderblue;">
+  <body style="background-color:powderblue;" class="testo">
     <p><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>FORM</center></strong></p>
 
 <form action="url-script" method="post">
