--- a/form/home.html
+++ b/form/home.html
@@ -17,14 +17,15 @@
     Telefono <input type="text" name="numero" size="10"><br>
 
     <input type="submit" name="invia" value="INVIA">
-    <input type="reset" name="annulla" value="cancella"><br>
+    <input type="reset" name="annulla" value="cancella"><br><br>
     <!--il tasto canecella tutti i campi del form perché è all'interno
     del form-->
     password <input type="password" name="pwd" size="20" maxlength="12">
-    <br>
+    <br><br>
     <input type="button" value="salva">
     <input type="button" value="fai click qui">
 </form>
+    <br>
 
 <form>
     Scegli il metodo di pagamento<br>
@@ -33,6 +34,7 @@
     <input type="radio" name="carta" value="mastercard">mastercard<br>
     <input type="radio" name="carta" value="ae">american express<br>
 </form>
+    <br>
 
 <form>
     Lingue conosciute<br>
@@ -43,9 +45,10 @@
     <input type="checkbox" name="cb04" value="spa">spagnolo<br>
 </form>
 <form action="https://www.amazon.it/" target="_blank">
-    <button name="vai" type="submit">invia</button><br>
+    <button name="vai" type="submit">invia</button><br><br>
     <textarea name="richiesta" rows="10" cols="40">scrivi qui le tue richieste</textarea>
 </form>
+    <br>
 <form>
     <select name="regione">
         <option value="1" selected>nord</option>
@@ -54,9 +57,10 @@
         <option value="4">isole</option>
     </select>
 </form>
+    <br>
 
 <label for="nomepersona">nome</label>
-<input type="text" id="nomepersona" size="25"><br><br>
+<input type="text" id="nomepersona" size="25"><br>
 
 <label for="email">email</label>
 <input type="email" id="email" required><br><br>
@@ -64,8 +68,8 @@
 <input type="date" name="datanascita"><br><br>
 
 0%<input type="range" name="percentuale" min="0" max="100" step="1">100%
-<br>
-<!--Scegli il file da inviare:&nbsp;--!>
+<br><br>
+    
 <input type="file" name="sceglifile" size=57>
   </body>
 </html>
